build: trigger deploy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -152,10 +152,14 @@ const quotes = [
 
           <Fragment slot="footer">
             <div>
-              <LinkButton href="/kurse/kurs1" classes="btn-secondary">Kurs 1</LinkButton><LinkButton
+              {
+                /* <LinkButton href="/kurse/kurs1" classes="btn-secondary">Kurs 1</LinkButton><LinkButton
                 href="/kurse/kurs2"
                 classes="btn-secondary">Kurs 2</LinkButton
-              >
+              >  */
+              }
+              <LabLinkButton href="/kurse/kurs1">Kurs 1</LabLinkButton>
+              <LabLinkButton href="/kurse/kurs2">Kurs 2</LabLinkButton>
             </div>
           </Fragment>
         </CardPlain>
