--- a/src/compositions/Hero/Background.astro
+++ b/src/compositions/Hero/Background.astro
@@ -22,6 +22,7 @@ import Circles from '@assets/branding/agentur/CL-Circles.svg';
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow: hidden;
 
     & .overlay-layer {
       --offset: 50%;
