--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -186,7 +186,7 @@ const quotes = [
             <div>
               <LinkButton
                 href="https://correlaid.org/daten-nutzen/projekte/"
-                classes="btn-secondary">Mehr über Projekte</LinkButton
+                classes="btn-secondary">Mehr zur Praxis</LinkButton
               >
             </div>
           </Fragment>
@@ -216,13 +216,13 @@ const quotes = [
           name="Max Mustermann"
           role="Data Scientist"
           slot="col1"
-          email="max@mustermann.de"
+          email="lab@correlaid.org?subject=CorrelLab&body=Hi%20Zo%C3%A9%2C"
         />
         <Persona
           name="Erika Mustermann"
           role="Data Engineer"
           slot="col2"
-          email="erika@mustermann.de"
+          email="lab@correlaid.org?subject=CorrelLab&body=Hi%20Ann-Kristin%2C"
         />
       </ColumnsSection>
     </div>
