--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -206,7 +206,7 @@ a.btn {
   height: var(--btn-height);
   max-height: var(--btn-height);
   cursor: pointer;
-  padding: 1px 1rem 0 1rem;
+  padding: 0 1rem;
   text-decoration: none;
   font-weight: var(--font-weight-bold);
   text-transform: uppercase;
@@ -301,7 +301,7 @@ a.btn {
     --btn-height: 44px;
     --icon-size: 36px;
 
-    padding: 1px 1rem 0 0.5rem;
+    padding: 0 1rem 0 0.75rem;
     gap: 4px;
 
     &.btn-icon-lab {
