build: test prefetch

--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -2,6 +2,11 @@
 const { href, variant = '', classes = '', children } = Astro.props;
 ---
 
-<a class="btn" href={href} class:list={[variant, classes]}><slot /></a>
+<a
+  class="btn"
+  href={href}
+  class:list={[variant, classes]}
+  data-astro-prefetch={href?.startsWith('/') ? 'hover' : null}><slot /> {href?.startsWith('/')}</a
+>
 
 <style></style>
