feat: init view transitions && rehydrate carousel

--- a/src/components/Stepper.astro
+++ b/src/components/Stepper.astro
@@ -28,7 +28,7 @@ const stepArray = Array.from({ length: steps }, (_, i) => i + 1);
   </div>
 </aside>
 
-<script define:vars={{ containerId }}>
+<script define:vars={{ containerId }} data-astro-rerun>
   const btns = document.querySelectorAll('.step-circle');
   const container = document.getElementById(containerId);
 
