--- a/src/components/NavigationCompact.astro
+++ b/src/components/NavigationCompact.astro
@@ -80,6 +80,10 @@ const { pathname } = Astro.url;
       }
     }
 
+    &.nav-primary {
+      padding-top: 6px;
+    }
+
     &.nav-secondary {
       font-size: 14px;
     }
