--- a/src/components/Persona.astro
+++ b/src/components/Persona.astro
@@ -13,9 +13,9 @@ const { name, role, image, email } = Astro.props;
 ---
 
 <div class="persona">
-  <div class="persona-image">
-    {image && <img src={image} alt={name} />}
-    {!image && <div class="persona-image-placeholder" />}
+  <div class="persona-image vignette">
+    {image && <img class="" src={image} alt={name} />}
+    {!image && <div class="persona-image-placeholder vignette" />}
   </div>
   <div class="persona-content">
     <h4>{name}</h4>
@@ -43,6 +43,7 @@ const { name, role, image, email } = Astro.props;
 
     .persona-image {
       width: 100%;
+      position: relative;
 
       img {
         position: relative;
@@ -51,6 +52,7 @@ const { name, role, image, email } = Astro.props;
         aspect-ratio: 1/1;
         border-radius: 50%;
         object-fit: cover;
+        z-index: -1;
 
         /* &::before {
           content: '';
@@ -73,23 +75,26 @@ const { name, role, image, email } = Astro.props;
         aspect-ratio: 1/1;
         background: var(--color-gray-200);
         border-radius: 50%;
+      }
+    }
 
-        &::before {
-          content: '';
-          position: absolute;
-          inset: 0;
-          border-radius: 500px;
-          padding: 10px;
-          background: linear-gradient(
-            45deg,
-            var(--color-lab-pink-medium),
-            var(--color-lab-blue-medium)
-          );
-          mask:
-            linear-gradient(#000 0 0) content-box,
-            linear-gradient(#000 0 0);
-          mask-composite: exclude;
-        }
+    .vignette {
+      &::before {
+        content: '';
+        z-index: 0;
+        position: absolute;
+        inset: 0;
+        border-radius: 500px;
+        padding: 10px;
+        background: linear-gradient(
+          45deg,
+          var(--color-lab-pink-medium),
+          var(--color-lab-blue-medium)
+        );
+        mask:
+          linear-gradient(#000 0 0) content-box,
+          linear-gradient(#000 0 0);
+        mask-composite: exclude;
       }
     }
 
