--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ import { strip_tag } from '@utils/md';
         </div>
       </ColumnsSection>
       <BackgroundSection
-        options={{ content_grid: true }}
+        options={{ content_grid: true, full_height: true, center: true }}
         asset={{ src: CarouselBackground.src, position: 'bottom right' }}
       >
         <Carousel slides={quotes.landing} id="carousel">
