feat: minor banner tweak

--- a/src/compositions/Banner.astro
+++ b/src/compositions/Banner.astro
@@ -30,7 +30,7 @@ import MailIcon from '@assets/svg/icons/mail.svg';
       grid-template-columns: auto auto;
       justify-content: center;
       align-items: center;
-      padding: var(--padding);
+      padding: calc(2 * var(--padding)) var(--padding);
       gap: var(--padding);
 
       & .prose {
