--- a/src/compositions/Hero.astro
+++ b/src/compositions/Hero.astro
@@ -17,7 +17,7 @@ import AidLinkButton from '@components/AidLinkButton.astro';
         <!-- CorrelLAB -->
       </h1>
       <h3 class="hero-subtitle"><slot name="subtitle" /></h3>
-      <div class="hero-teaser txt-stroke-dark">
+      <div class="hero-teaser txt-stroke-dark flex rows gap-2">
         <slot name="teaser" />
       </div>
       <div class="hero-cta">
