--- a/src/compositions/Header.astro
+++ b/src/compositions/Header.astro
@@ -16,7 +16,7 @@ import LinkButton from '@/components/LinkButton.astro';
     <!-- <Image src={CorrelAidLogoWidePng} alt="CorrelAid Logo" width={400} /> -->
   </div>
   <!-- <NavigationMain /> -->
-  <NavigationCompact />
+  <!-- <NavigationCompact /> -->
   <div class="corner">
     <LinkButton href="#">Unterstützen</LinkButton>
   </div>
