--- a/src/compositions/Banner.astro
+++ b/src/compositions/Banner.astro
@@ -9,15 +9,19 @@ import MailIcon from '@assets/svg/icons/mail.svg';
     <CorrelLabKompaktDynamic height={'80'} color="var(--color-lab-muted)" />
   </div>
   <div class="prose content-box narrow">
-    <h2 class="light">Interessiert?</h2>
+    <h2 class="light"><slot name="title">Interessiert?</slot></h2>
     <div class="body">
-      <p class="light">
-        hr habt Fragen, z. B. zum Stipendienticket oder wollt direkt im CorrelLAB durchstarten?
-        Schreibt uns einfach eine kurze Nachricht, wir freuen uns auf euch!
-      </p>
+      <slot name="body">
+        <p class="light">
+          hr habt Fragen, z. B. zum Stipendienticket oder wollt direkt im CorrelLAB durchstarten?
+          Schreibt uns einfach eine kurze Nachricht, wir freuen uns auf euch!
+        </p>
+      </slot>
     </div>
-    <LinkButton variant="btn-light" href="mailto:lab@correlaid.org" classes="btn-icon"
-      ><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
+    <slot name="cta">
+      <LinkButton variant="btn-light" href="mailto:lab@correlaid.org" classes="btn-icon"
+        ><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
+      ></slot
     >
   </div>
 
