--- a/src/pages/kurse/kurs1.astro
+++ b/src/pages/kurse/kurs1.astro
@@ -1,4 +1,6 @@
 ---
+import { getImage, Image } from 'astro:assets';
+
 import KursLayout from '@layouts/KursLayout.astro';
 import Banner from '@compositions/Banner.astro';
 import BackgroundSection from '@components/sections/BackgroundSection.astro';
@@ -6,68 +8,232 @@ import ColumnsSection from '@components/sections/ColumnsSection.astro';
 import CardPlain from '@components/cards/CardPlain.astro';
 import LinkButton from '@components/LinkButton.astro';
 import Persona from '@components/Persona.astro';
+import LabLinkButton from '@components/LabLinkButton.astro';
+import Blockquote from '@/components/Blockquote.astro';
+import Carousel from '@components/Carousel.astro';
+import MailIcon from '@assets/svg/icons/mail.svg';
+
+import carouselBackgroundSvg from '@assets/branding/agentur/CL-Zitat-BackgroundGradient-.svg';
+const CarouselBackground = await getImage({
+  src: carouselBackgroundSvg,
+  format: 'webp',
+});
+
+import kurs1 from '@data/kurs1.json';
+import quotes from '@data/quotes.json';
+import * as KostenContent from '@content/landing/kosten.md';
+import FlyerKurs1 from '@assets/images/correllab-flyer-kurs1.png';
+
+import ImageZoe from '@assets/images/wolter-zoe.jpg';
+import ImageAntje from '@assets/images/relitz-antje.png';
+import ImageEmma from '@assets/images/morlock-emma.png';
+
+const people = [
+  {
+    name: 'Zoé Wolter',
+    role: 'Geschäftsführung und Bildung',
+    image: ImageZoe.src,
+    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Ann-Kristin%2C',
+  },
+  {
+    name: 'Antje Relitz',
+    role: 'Bildung',
+    image: ImageAntje.src,
+    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Emma%2C',
+  },
+  {
+    name: 'Emma Morlock',
+    role: 'Werkstudentin Data Literacy',
+    image: ImageEmma.src,
+    email: 'lab@correlaid.org?subject=CorrelLAB&body=Hi%20Emma%2C',
+  },
+];
 ---
 
 <KursLayout>
-  <section class="prose">
-    <h3>Kurs 1</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-  </section>
-  <BackgroundSection options={{ gradient: 'b' }}>
-    <ColumnsSection section={false}>
-      <h2 slot="title">Demo: Background-Section with Gradient ("B")</h2>
-      <!-- <div style="height: 80vh" class="content-box"> -->
-      <CardPlain slot="col1">
-        <Fragment slot="card-title">Phase 1: Kursphase</Fragment>
-        <Fragment slot="subtitle">September bis November 2025</Fragment>
-        <ul slot="content">
-          <li>Von Datenschutz bis Datenmanagement für grundlegendes Daten-Know-how</li>
-          <li>Tipps und Tools für die angewandte Datenanalyse</li>
-          <li>12 Wochen, 12 Module für gestärkte Datenkompetenz</li>
-        </ul>
-        <Fragment slot="footer">
-          <p>parallel - modular - individuelle Beratung</p>
-          <div>
-            <LinkButton href="/kurse/kurs1" classes="btn-secondary">Kurs 1</LinkButton>
-            <LinkButton href="/kurse/kurs2" classes="btn-secondary">Kurs 2</LinkButton>
-          </div>
-        </Fragment>
-      </CardPlain>
-      <CardPlain slot="col2">
-        <Fragment slot="card-title">Phase 2: Praxisphase</Fragment>
-        <Fragment slot="subtitle">Dezember 2025 bis August 2026</Fragment>
-        <ul slot="content">
-          <li>Gemeinsame Arbeit mit 4 bis 5 Datenanalyst* innen an eurem Datenprojekt</li>
+  <h4 slot="subtitle">Kurs 1: Daten verstehen &ndash;Grundlagenwissen entdecken</h4>
+  <p slot="teaser">
+    Viele Organisationen sammeln täglich Daten – doch nur wenige nutzen sie gezielt. Wie lassen sich
+    Daten strategisch für Entscheidungen nutzen? Was bedeuten Datenethik und Datenschutz konkret im
+    Alltag? Und wie gelingt der Einstieg, wenn im Team keine Statistikexpertise vorhanden ist?
+  </p>
+  <Fragment slot="cta">
+    <LabLinkButton href="#start">Kursüberblick</LabLinkButton>
+    <LinkButton href="/">Zurück zur Übersicht</LinkButton>
+  </Fragment>
+
+  <Fragment>
+    <section class="prose">
+      <Blockquote bare wide>
+        In unserem Kurs „Daten verstehen: Grundlagenwissen entdecken“ lernt ihr, Daten richtig
+        einzuschätzen, Wirkung messbar zu machen und datenbasierte Projekte sicher anzugehen – auch
+        ohne Vorwissen.
+      </Blockquote>
+
+      <p>
+        Wir verbinden Grundlagenwissen mit konkreten Anwendungen und schaffen Raum für Austausch,
+        Fragen und individuelle Begleitung – von und für die Zivilgesellschaft!
+      </p>
+    </section>
+
+    <ColumnsSection center_title>
+      <Fragment slot="col1">
+        <h4>Der Kurs ist für dich richtig, wenn…</h4>
+        <ul>
+          <li>… du in die Welt der Daten einsteigen willst – ohne Vorkenntnisse.</li>
           <li>
-            z. B. Wirkungsmessung, Datenvisualisierung, Reportautomatisierungen, Vorhersagemodelle
+            … du lernen möchtest, Themen wie Datenschutz, künstliche Intelligenz oder maschinelles
+            Lernen abwägend und kritisch zu beurteilen.
           </li>
-          <li>begleitende 1:1-Datensprechstunden</li>
+          <li>
+            … du einen Überblick bekommen willst, wofür du Daten nutzen kannst: von Visualisierungen
+            und Data Storytelling über Wirkungsmessung bis hin zu automatisiertem Reporting.
+          </li>
+          <li>… du mehr aus den Daten machen möchtest, die in deiner Organisation vorliegen.</li>
         </ul>
-        <Fragment slot="footer">
-          <p>praxisbezogen – bedarfsorientiert – pragmatisch</p>
-          <div>
-            <LinkButton href="https://correlaid.org/daten-nutzen/projekte/" classes="btn-secondary"
-              >Mehr über Projekte</LinkButton
-            >
-          </div>
-        </Fragment>
-      </CardPlain>
-      <!-- </div> -->
+      </Fragment>
+
+      <Fragment slot="col2">
+        <h4>Im Kurs lernst du…</h4>
+        <ul>
+          <li>
+            … relevante Daten zu identifizieren und erfährst, wofür du diese Daten nutzen kannst.
+          </li>
+          <li>
+            … Daten zu strukturieren und ihre Nutzung ethisch und datenschutzrechtlich zu
+            beurteilen.
+          </li>
+          <li>
+            … Grundkenntnisse in Statistik, Künstlicher Intelligenz und Visualisierung selbstbewusst
+            anzuwenden.
+          </li>
+          <li>… welche Anwendungsfälle Daten in der Wirkungsmessung und im Reporting haben.</li>
+          <li>… wie du dein erstes Datenprojekt in der Praxis initiieren und planen kannst.</li>
+        </ul>
+      </Fragment>
     </ColumnsSection>
-  </BackgroundSection>
-  <section class="prose">
-    <h3>Kurs 1</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+
+    <BackgroundSection
+      options={{ content_grid: true, full_height: true, center: true }}
+      asset={{ src: CarouselBackground.src, position: 'bottom right' }}
+    >
+      <Carousel slides={quotes.landing.filter((quote) => quote.k === 1)} id="carousel">
+        {
+          quotes.landing
+            .filter((quote) => quote.k === 1)
+            .map((quote, index) => (
+              <div class="carousel-content" data-step-id={index + 1}>
+                <Blockquote id={index + 1}>
+                  <Fragment>{quote.quote}</Fragment>
+                  <Fragment slot="cite">
+                    {' '}
+                    <span class="name txt-italic">{quote.cite.name}</span>
+                    <span class="role">{quote.cite.role}</span>
+                  </Fragment>
+                </Blockquote>
+              </div>
+            ))
+        }
+      </Carousel>
+    </BackgroundSection>
+    <section class="prose">
+      <CardPlain>
+        <h4 slot="card-title">Wie läuft der Kurs ab?</h4>
+        <ul slot="content">
+          <li>Zeitraum: 12 Wochen vom 12. September bis 12. Dezember 2025</li>
+          <li>Zeitaufwand: 2 bis 4 Stunden / Woche</li>
+          <li>Format: Integriertes Lernformat mit</li>
+          <ul>
+            <li>interaktiver Lernplattform,</li>
+            <li>
+              wöchentlicher Online-Livesession mit datenwissenschaftlichen Tutor\*innen, immer
+              freitags zu den oben genannten Terminen von 12 bis 13 Uhr,
+            </li>
+            <li>gemeinsamem Lernen in kleinen Gruppen,</li>
+            <li>
+              individueller Beratung in Datensprechstunden zu den Herausforderungen eurer eigenen
+              Organisation.
+            </li>
+          </ul>
+        </ul>
+      </CardPlain>
+    </section>
+
+    <section class="prose">
+      <CardPlain>
+        <h4 slot="card-title">Die Themen</h4>
+        <table slot="content">
+          <tbody>
+            {
+              kurs1.map((item) => (
+                <tr>
+                  <td>{item.date}</td>
+                  <td>{item.topic}</td>
+                </tr>
+              ))
+            }
+          </tbody>
+        </table>
+      </CardPlain>
+    </section>
+    <section>
+      <figure>
+        <Image src={FlyerKurs1} alt="Flyer Kurs 1" />
+        <figcaption>TODO: Flyer</figcaption>
+      </figure>
+      <div class="subsection content-box narrow flex rows align-center">
+        <Fragment set:html={await KostenContent.compiledContent()} />
+      </div>
+    </section>
+  </Fragment>
+
+  <section class="sticky sticky-bottom">
+    <LabLinkButton href="https://pretix.eu/control/event/correlaid/correllab-1-dl/">
+      Hier geht es zur Anmeldung!
+    </LabLinkButton>
   </section>
 
-  <ColumnsSection center_title>
-    <h2 slot="title">Eure Ansprechpartner</h2>
-    <Persona name="Max Mustermann" role="Data Scientist" slot="col1" email="max@mustermann.de" />
-    <Persona name="Erika Mustermann" role="Data Engineer" slot="col2" email="erika@mustermann.de" />
-  </ColumnsSection>
-  <Banner slot="banner" />
+  <section>
+    <h3 class="text-center">Das ist unser Team</h3>
+    <div class="subsection content-box narrow flex cols align-center">
+      {
+        people.map((person) => (
+          <Persona
+            name={person.name}
+            role={person.role}
+            image={person.image}
+            email={person.email}
+          />
+        ))
+      }
+    </div>
+  </section>
+  <Banner slot="banner">
+    <Fragment slot="title">Interessiert?</Fragment>
+    <Fragment slot="body">
+      <p class="light">
+        Wir sind immer auf der Suche nach ehrenamtlichen Tutor*innen für unseren nächsten Kurs!
+      </p>
+      <p class="light">Melde dich dazu einfach kurz bei unserem Bildungsteam.</p>
+    </Fragment>
+    <LinkButton
+      variant="btn-light"
+      href="mailto:education@correlaid.org"
+      classes="btn-icon"
+      slot="cta"><MailIcon height={'20'} /> Nachricht schreiben</LinkButton
+    >
+  </Banner>
+
+  <style>
+    .sticky-bottom {
+      position: sticky;
+      bottom: 0;
+      width: 100%;
+      background-color: var(--color-background);
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
 </KursLayout>
